# thesis-nam

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
configs/: california_housing_na2m_search.yaml  compas-scores-two-years_na2m_interactions_tuned.yaml  compas-scores-two-years_na2m_tuned.yaml  compas-scores-two-years_tuned.yaml  compas_baseline.yaml  compas_na2m_search.yaml  compas_search.yaml
notebooks/: data.py  data_size.py  evaluate.ipynb  model.py  na2m_concurvity_tuning.ipynb  na2m_fast.ipynb  na2m_full.ipynb  na2m_pipeline_test.py  na2m_test.ipynb  notebook.ipynb  run_nam_na2m.py  test.ipynb  test.py  train.py  trainer.ipynb  tuning.ipynb  verify_measures.py
notebooks/runs/: compas-scores-two-years_optuna.db
runs/compas_na2m/fold_0/: concurvity_tuned_config.yaml  gaminet_tuned_config.yaml  mains_tuned_config.yaml  regularized_config_meta.yaml  regularized_lambda2_sweep.csv  (+1 more)
scripts/: evaluate.py  run_nam.py  train.py  tune_nam.py
scripts/eval/: evaluate_na2m_mains.py  model_runner.py  run_na2m_eval.py
scripts/na2m/: confirm_regularized_arm.py  evaluate_na2m_mains.py  evaluate_nam.py  model_runner.py  reduce_all_folds.py  reduce_fold0.py  reduce_mains_subsample.py  run_na2m_eval.py  run_nam_na2m.py  tune_clarity.py  tune_concurvity_reg.py  tune_main_na2m.py  tune_na2m.py
scripts/nam/: evaluate.py  run_nam.py  tune_nam.py
scripts/reduce/: reduce_all_folds.py  reduce_fold.py  reduce_fold0.py  reduce_mains_subsample.py
scripts/tuning/: confirm_regularized_arm.py  tune_clarity.py  tune_concurvity_reg.py  tune_main_na2m.py
(+759 files in other folders)
