[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nam"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "optuna>=3.0",
    "pyyaml>=6.0",
    "interpret>=0.5",
]

[tool.hatch.build.targets.wheel]
# src layout with two top-level packages: the frozen NAM reproduction (`nam`)
# and the NA2M extension (`na2m`). Both must be packaged explicitly because the
# project name ("nam") only auto-discovers the matching package.
packages = ["src/nam", "src/na2m"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "jupyter",
]